[package]
name = "rust_fluid_sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.10.0"
rand = "0.8.5"
bevy_egui = "0.20"
bevy_prototype_debug_lines = { version = "0.10.1", features = ["3d"] }

[profile.release]
# lto = "thin"
